// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardWidget snapshot testing renders default props 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <BVLinearGradient
    colors={Array []}
    endPoint={Object {}}
    locations={Array []}
    startPoint={Object {}}
    style={undefined}
  >
    <View
      onPress={undefined}
      style={undefined}
    >
      <View
        style={undefined}
      >
        <Image
          className="header-icon"
          resizeMode="contain"
          source={null}
          style={undefined}
        />
      </View>
      <View
        className="header-title"
        style={undefined}
      >
        <Text
          allowFontScaling={true}
          style={undefined}
        >
          
        </Text>
      </View>
      <View
        className="header-button"
        style={undefined}
      >
        <Text
          allowFontScaling={true}
          style={undefined}
        >
          total: 0
        </Text>
      </View>
    </View>
    <View
      style={undefined}
    >
      <View
        style={undefined}
      >
        <Text
          style={undefined}
        >
          
        </Text>
        <Text
          style={undefined}
        >
          Assignedtoland

        </Text>
      </View>
    </View>
  </BVLinearGradient>
</View>
`;

exports[`DashboardWidget snapshot testing renders default props with displayingData 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <BVLinearGradient
    colors={Array []}
    endPoint={Object {}}
    locations={Array []}
    startPoint={Object {}}
    style={undefined}
  >
    <View
      onPress={undefined}
      style={undefined}
    >
      <View
        style={undefined}
      >
        <Image
          className="header-icon"
          resizeMode="contain"
          source={null}
          style={undefined}
        />
      </View>
      <View
        className="header-title"
        style={undefined}
      >
        <Text
          allowFontScaling={true}
          style={undefined}
        >
          
        </Text>
      </View>
      <View
        className="header-button"
        style={undefined}
      >
        <Text
          allowFontScaling={true}
          style={undefined}
        >
          total: 0
        </Text>
      </View>
    </View>
    <View
      style={undefined}
    >
      <View
        style={undefined}
      >
        <Text
          style={undefined}
        >
          1
        </Text>
        <Text
          style={undefined}
        >
          Assignedtoland

        </Text>
      </View>
    </View>
  </BVLinearGradient>
</View>
`;

exports[`DashboardWidget snapshot testing renders without props 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <BVLinearGradient
    colors={Array []}
    endPoint={Object {}}
    locations={Array []}
    startPoint={Object {}}
    style={undefined}
  >
    <View
      onPress={undefined}
      style={undefined}
    >
      <View
        style={undefined}
      >
        <Image
          className="header-icon"
          resizeMode="contain"
          source={null}
          style={undefined}
        />
      </View>
      <View
        className="header-title"
        style={undefined}
      >
        <Text
          allowFontScaling={true}
          style={undefined}
        >
          
        </Text>
      </View>
      <View
        className="header-button"
        style={undefined}
      >
        <Text
          allowFontScaling={true}
          style={undefined}
        >
          total: 0
        </Text>
      </View>
    </View>
    <View
      style={undefined}
    />
  </BVLinearGradient>
</View>
`;
